--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sadam Legal Consult</title>
+  <title>S.S. LEGAL CONSULT</title>
 
   <!-- Basic SEO -->
   <meta name="description" content="Sadam Legal Consult – Your Anchor in Times of Uncertainty. Reliable legal guidance and support.">
@@ -59,8 +59,9 @@
     <!-- Hero Section -->
     <section id="hero" style="background-image: url('lawyer3.jpeg');">
       <div class="hero-content">
-        <h2>Your Anchor in Times of Uncertainty</h2>
-        <p>Calm guidance, legal expertise, and trusted support for individuals and businesses.</p>
+        <h2>At S.S Legal Consult, we believe that justice is not just a principle – it’s a right.</h2>
+        <p>Our mission is to provide clear, practical, and effective legal solutions tailored to meet your needs.
+</p>
         <a href="contact.html" class="btn">Contact Us</a>
         <a href="consultation.html" class="btn secondary">Book Consultation</a>
       </div>
@@ -71,7 +72,7 @@
   <div class="text-block">
     <h2 class="section-title">Strengthen your legal standing while working with a team that puts your rights first</h2>
     <p class="section-description">
-      At Sadam Legal Consult, we offer trusted 
+      At S.S. LEGAL CONSULT, we offer trusted 
       legal advice to help you understand your rights and make informed 
       decisions.If your matter requires further action, we can connect you
        to reputable law firms within our network for specialized support—ensuring you
@@ -79,7 +80,7 @@
 
 
     </p>
-    <a href="#case-studies" class="cta-button">Get Legal Help &nbsp;›</a>
+    <a href="https://wa.me/787312507" class="cta-button">Get Legal Help &nbsp;›</a>
   </div>
   <div class="image-wrapper">
     <div class="angled-bg"></div>
